# benchtools

./:  log_file.py  .buildinfo  .gitignore  MANIFEST.in  README.md  cli.html  genindex.html  index.html  objects.inv  project.toml  py-modindex.html  pylib.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: publish.yml
_sources/: cli.md.txt  index.md.txt  pylib.md.txt
benchtools/: __init__.py  benchmark.py  betterbench.py  cli.py  demo.py  designer.py  logger.py  response.py  runner.py  scorerers.py  scorers.py  task.py  utils.py
benchtools/assets/: betterbench.yml
benchtools/assets/demos/folderbench/: custom_scorer.py  info.yml  multiple_models.yml  runner.yml
benchtools/assets/demos/folderbench/tasks/multiply/: info.yml
benchtools/assets/demos/folderbench/tasks/symbols/: values.csv
benchtools/assets/demos/listbench/: custom_response.py  custom_scorer.py  info.yml
demobench/add/: values.csv
demobench/miscops/: task.yml
demobench/tasks/add/: values.csv
demos/folderbench/: README.md  multiple_models.yml
demos/folderbench/tasks/add/: values.csv
demos/folderbench/tasks/multiply/: template.txt
demos/folderbench/tasks/symbols/: template.txt  values.csv
demos/listbench/: custom_scorer.py  info.yml  tasks.yml
docs/: index.md
docs/source/: cli.md  concept.md  conf.py  demo.md  index.md  pylib.md  scoring.md
docs/source/guide/: response.md  scoring.md  specification.md
toybench/add/: task.txt
