[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchtools"
version = "0.2.0"
dependencies = [
  "CLick",
  "pyyaml",
  "pandas",
  "datasets",
  "openai",
  "ollama"
]
requires-python = ">=3.10"
authors = [
  {name = "Ayman Sandouk", email = "ayman_sandouk@uri.edu"},
  {name = "Sarah M Brown", email = "brownsarahm@uri.edu"},
]
maintainers = [
  {name = "Ayman Sandouk", email = "ayman_sandouk@uri.edu"},
  {name = "Sarah M Brown", email = "brownsarahm@uri.edu"}
]
description = ""
readme = "README.md"
license = "MIT"  # or license = {file = "LICENSE.txt"} for legacy declaration

keywords = ["benchmark", "machine-learning", "ai", "llm"]


[project.optional-dependencies]
cli = [
  "click",
  "pyyaml",
  "pandas",
]

[project.urls]
Homepage = "https://ml4sts.com/benchtools"
Documentation = "https://ml4sts.com/benchtools"
Repository = "https://github.com/ml4sts/benchtools"
"Bug Tracker" = "https://github.com/ml4sts/benchtools/issues"


[project.scripts]
benchtool = "benchtools.cli:benchtool"
betterbench = "benchtools.cli:betterbench"

